Fix the layout problem at mobile

--- a/static/bootstrap/dashboard.css
+++ b/static/bootstrap/dashboard.css
@@ -6,6 +6,12 @@
 body {
   padding-top: 50px;
 }
+
+.row{
+	margin-left:0px !important;
+	margin-right: 0px !important;
+}
+
 .main{
     margin-top:20px;
 }
@@ -51,9 +57,9 @@ body {
 
 /* Sidebar navigation */
 .nav-sidebar {
-  margin-right: -21px; /* 20px padding + 1px border */
+  margin-right: -36px; /* 20px padding + 1px border */
   margin-bottom: 20px;
-  margin-left: -20px;
+  margin-left: -35px;
 }
 .nav-sidebar > li > a {
   padding-right: 20px;
